--- a/project_mycoat.html
+++ b/project_mycoat.html
@@ -18,6 +18,7 @@
             display: block;
         }
     </style>
+    <style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Biglyft - Netherlands | Project: My Coat - check our recent work</title>
@@ -182,15 +183,15 @@ $('.QOverlay').css('visibility','hidden');
                     </div>
                 </section>
 
-                <div class="mobile-preview project_bg" >
+                <div class="mobile-preview project_bg" style="background:white" >
 				<!-- <div class="scroll-icon2"></div> -->
-                    <div class="container-fluid">
-                        <div class="row">
+                    <div class="container-fluid" style="background:white">
+                        <div class="row" style="background:white">
                             <div class="col-xs-12">
 								<div class="content">
 									<div>
 										<img src="images/project-background.png" alt="project-background-icon" class="img-responsive"> 
-										<p>
+										<p style="color:black">
 										MY COAT was founded with an idea to create a place where women can find the most gorgeous and high quality coats for a fair price. My-Coat does best to offer a wide selection of outerwear which can meet the requirements of most demanding customers.
 										</p>
 										<p class="title_description1">
