--- a/services.html
+++ b/services.html
@@ -110,12 +110,12 @@ $('.QOverlay').css('visibility','hidden');
             #services .service-tabs .nav-tabs .title{
                 color:#000000;
             }
-            a.pull-right :hover{
+            /*a.pull-right :hover{
                 background:#FF6801;
                 color:white;
-            }
+            }*/
             a.pull-right:hover> h1{
-                color:white;
+                text-decoration: underline;
             }
             body{
                 background:white;
