--- a/project_acmetek.html
+++ b/project_acmetek.html
@@ -17,6 +17,12 @@
         ng\:form {
             display: block;
         }
+        #menu_outer ul li:hover{
+                background:none
+            }
+            #menu_outer ul li a:hover{
+                color:#FF6801;
+            }
     </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -106,14 +112,14 @@ $('.QOverlay').css('visibility','hidden');
         </script>
         <div class="fat-nav" >
         <div class="fat-nav__wrapper" id="menu_outer">
-            <ul>
+            <ul style="background:#efefef">
             	<li style="background:none;"><a href="/"><img src="images/top_logo.png" alt="top-logo"></a></li>
-                <li><a href="/">HOME</a></li>
-                <li><a href="work.html">WORK</a></li>
-                <li><a href="services.html">SERVICES</a></li>
+                <li><a style="color:black" href="/">HOME</a></li>
+                <li><a style="color:black" href="work.html">WORK</a></li>
+                <li><a style="color:black" href="services.html">SERVICES</a></li>
                <!-- <li><a href="#">Blog</a></li>-->
-                <li><a href="people.html">PEOPLE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a style="color:black" href="people.html">PEOPLE</a></li>
+                <li><a style="color:black" href="contact.html">CONTACT</a></li>
             </ul>
         </div>
          <div class="social-links">
@@ -171,7 +177,7 @@ $('.QOverlay').css('visibility','hidden');
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="content">
-                                        <p>
+                                        <p style="color:white">
 											They are based in US and one of the biggest  
                                             resellers of SSL Certificates.</p>
                                     </div>
