--- a/project_packright.html
+++ b/project_packright.html
@@ -17,6 +17,15 @@
         ng\:form {
             display: block;
         }
+        body{
+            background:white
+        }
+        #menu_outer ul li:hover{
+                background:none
+            }
+            #menu_outer ul li a:hover{
+                color:#FF6801;
+            }
     </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -36,7 +45,7 @@
     <!-----end BIGLYFT------>
     <script type="text/javascript" src="queryLoader.js"></script>
 
-    <body class="loaded" data-ng-app="teamgeek" data-ng-class="{ loaded: appLoaded }" data-ng-strict-di="">
+    <body class="loaded" data-ng-app="teamgeek" data-ng-class="{ loaded: appLoaded }" style="background:white" data-ng-strict-di="">
         <script type="text/javascript" async src="js/ga.js"></script>
         <script type="text/javascript">
             var _gaq = _gaq || [];
@@ -107,14 +116,14 @@ $('.QOverlay').css('visibility','hidden');
         </script>
         <div class="fat-nav" >
         <div class="fat-nav__wrapper" id="menu_outer">
-            <ul>
+            <ul style="background:#efefef">
             	<li style="background:none;"><a href="/"><img src="images/top_logo.png" alt="top-logo"></a></li>
-                <li><a href="/">HOME</a></li>
-                <li><a href="work.html">WORK</a></li>
-                <li><a href="services.html">SERVICES</a></li>
+                <li><a style="color:black" href="/">HOME</a></li>
+                <li><a style="color:black" href="work.html">WORK</a></li>
+                <li><a style="color:black" href="services.html">SERVICES</a></li>
                <!-- <li><a href="#">Blog</a></li>-->
-                <li><a href="people.html">PEOPLE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a style="color:black" href="people.html">PEOPLE</a></li>
+                <li><a style="color:black" href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="social-links">
@@ -173,7 +182,7 @@ $('.QOverlay').css('visibility','hidden');
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="content">
-                                        <p>PackRight is a B2B packaging company based in Rijsenhout, Netherlands.
+                                        <p style="color:white">PackRight is a B2B packaging company based in Rijsenhout, Netherlands.
                                             They are one of the best in the packaging business in Netherlands and have a list of well known clients like RITUALS, LAGEEN, KEUNE etc.
 										</p>
                                     </div>
