--- a/people.html
+++ b/people.html
@@ -12,17 +12,7 @@
     <meta name="description" content="We are a Web Design company in Netherlands, have a dedicate team of Web Developers who can work with latest technology and you can hire Web Developer for your project.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
      <meta name="keywords" content="wordpress Rotterdam, creative agency Amsterdam, web developer Amsterdam, web design Den Haag, Web Development Amsterdam, web development company Amsterdam, web developer Amsterdam">
-    <style>
-        #menu_outer ul li:hover{
-                background:none
-            }
-            #menu_outer ul li span:hover{
-                color:#FF6801;
-            }
-            #people section{
-                background:white
-            }
-    </style>
+
         
         
      <link type="images/favicon" href="images/favicon.ico" rel="shortcut icon" />
@@ -169,7 +159,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
         <div class="fat-nav" >
         <div class="fat-nav__wrapper" id="menu_outer">
-            <ul style="background:#efefef">
+            <ul>
             	<!--<li style="background:none;"><a href="index.html"><img src="images/top_logo.png" alt="top-logo"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
@@ -182,12 +172,12 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                     	<img src="images/top_logo.png" alt="top-logo">
                     </span>
                 </li>
-                <li style="color:black"><span onClick="go_on('/')">HOME</span></li>
-                <li style="color:black"><span onClick="go_on('work.html')">WORK</span></li>
-                <li style="color:black"><span onClick="go_on('services.html')">SERVICES</span></li>
+                <li><span onClick="go_on('/')">HOME</span></li>
+                <li><span onClick="go_on('work.html')">WORK</span></li>
+                <li><span onClick="go_on('services.html')">SERVICES</span></li>
               <!--  <li><span onClick="go_on('blog')">BLOG</span></li> -->
-                <li style="color:black"><span onClick="go_on('people.html')">PEOPLE</span></li>
-                <li style="color:black"><span onClick="go_on('contact.html')">CONTACT</span></li>
+                <li><span onClick="go_on('people.html')">PEOPLE</span></li>
+                <li><span onClick="go_on('contact.html')">CONTACT</span></li>
             </ul>
         </div>
          <div class="social-links">
@@ -212,7 +202,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                 <div data-is-collapsed="true" class="navbar collapsed" data-ng-class="{ 'collapsed': collapsed }">
                 </div>
             </aside>
-            <div id="resizable-container" style="background:white">
+            <div id="resizable-container">
                 <section class="hero">
                     <div class="emblem">
                    <!-- <div class="viewport_top_logo">
@@ -231,21 +221,21 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                     // });
                 </script>             
                 <section class="photos custom_team">
-                    <div class="container-fluid full text-center" style="background:white">
+                    <div class="container-fluid full text-center">
                         <img src="images/team.png" alt="team" class="img-responsive">
-                        <p class="title_description" style="color:black">
+                        <p class="title_description">
                             With an eye for Quality and detail, we have answers to your Web Development needs.
 						</p>
-						<p class="title_description1" style="color:black">
+						<p class="title_description1">
 							We are BIGLYFT
 						</p>
-						<p style="color:black">
+						<p>
 							We provide Web Solutions with clarity, simplicity and honesty.
 						</p>
-                        <p style="color:black"> 
+                        <p> 
 							If you need a Complex WEB APPLICATION, a WEBSITE, a WEBSHOP or any kind of Web Solutions...   
 						</p>
-						<p class="title_description2" style="color:#FFAB31">
+						<p class="title_description2" >
 							Just bring it on!!!
 						</p>
 
@@ -253,8 +243,8 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                         <br>
                     </div>
                     <div class="container-fluid full">
-                        <div class="row" style="background:white">
-                            <div class="col-xs-6 col-md-4 no-gutter" style="background:white">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-4 no-gutter">
                                 <div data-bg-src="images/team01.jpg" data-overlay-src="images/team01-badge.png" class="team-member">
                                     <!-- ngIf: bgSrc -->
                                     <img src="images/team01.jpg" alt="team01" class="background" data-ng-if="bgSrc" data-ng-src="images/team01.jpg">
@@ -294,11 +284,11 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                     </div>
                 </section>
                 <section class="office custom_office">
-    				<div class="container-fluid full text-center" style="background:white">
+    				<div class="container-fluid full text-center">
                         <img src="images/office.png" alt="office" class="img-responsive">
-                        <p class="title_description" style="color:black">We are located in the business district of Amsterdam-Zuidoost, amidst beautiful surroundings in Herikerbergweg.</p>
-                        <p style="color:black">Music . Fun . Play . Work. That's our Office.</p> </br>
-    					<p class="title_description1" style="color:#FFAB31">We THINK, We DEFINE, We CREATE.</p>
+                        <p class="title_description">We are located in the business district of Amsterdam-Zuidoost, amidst beautiful surroundings in Herikerbergweg.</p>
+                        <p>Music . Fun . Play . Work. That's our Office.</p> </br>
+    					<p class="title_description1">We THINK, We DEFINE, We CREATE.</p>
                         <p>&nbsp; </p>
                         <div class="row">
                             <div class="col-xs-6 no-gutter" style="float:left;">
