--- a/work.html
+++ b/work.html
@@ -40,16 +40,6 @@
 		{
             background: none;
         }
-		#menu_outer ul li span
-		{
-			cursor:pointer;
-		}
-            #menu_outer ul li:hover{
-                background:none
-            }
-            #menu_outer ul li span:hover{
-                color:#FF6801;
-            }
     </style>
 
     <link rel="stylesheet" href="css/metrojs.min.css" type="text/css">
@@ -147,7 +137,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
         <div class="fat-nav" >
         <div class="fat-nav__wrapper" id="menu_outer">
-            <ul style="background:#efefef">
+            <ul>
             	<!--<li style="background:none;"><a href="index.html"><img src="images/top_logo.png"  alt="top-logo"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
@@ -155,17 +145,17 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                 <li><a href="blog">Blog</a></li>
                 <li><a href="people.html">People</a></li>
                 <li><a href="contactus.html">Contact</a></li>-->
-                <li style="background:none;">
+                <li>
                 	<span onClick="go_on('/')">
                     	<img src="images/top_logo.png" alt="top-logo">
                     </span>
                 </li>
-                <li style="color:black"><span onClick="go_on('/')">HOME</span></li>
-                <li style="color:black"><span onClick="go_on('work.html')">WORK</span></li>
-                <li style="color:black"><span onClick="go_on('services.html')">SERVICES</span></li>
+                <li><span onClick="go_on('/')">HOME</span></li>
+                <li><span onClick="go_on('work.html')">WORK</span></li>
+                <li><span onClick="go_on('services.html')">SERVICES</span></li>
               <!--  <li><span onClick="go_on('blog')">BLOG</span></li> -->
-                <li style="color:black"><span onClick="go_on('people.html')">PEOPLE</span></li>
-                <li style="color:black"><span onClick="go_on('contact.html')">CONTACT</span></li>
+                <li><span onClick="go_on('people.html')">PEOPLE</span></li>
+                <li><span onClick="go_on('contact.html')">CONTACT</span></li>
             </ul>
         </div>
         <div class="social-links">
